# test20250518-gemini-chatbot

./: README.md  cli.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
